--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
 
     <application
         android:allowBackup="true"
@@ -17,7 +18,6 @@
         <activity android:name=".Activities.BufferActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -25,7 +25,9 @@
         <activity android:name=".MainActivity"/>
         <activity android:name=".Activities.InfoActivity" />
         <activity android:name=".Activities.ScoreActivity"></activity>
-        <activity android:name=".Activities.Main2Activity"></activity>
+        <activity android:name=".Activities.Logout">
+        </activity>
+        <service android:name=".Services.ContestRunner"></service>
     </application>
 
 </manifest>
