--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,18 +16,18 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".MainActivity" >
+        <activity android:name=".activities.BufferActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+        <activity android:name=".MainActivity"></activity>
         <activity android:name=".activities.EndingActivity" />
         <activity android:name=".activities.ScoreActivity" />
         <activity android:name=".activities.Logout" />
         <activity android:name=".login.LoginActivity" />
-        <activity android:name=".activities.BufferActivity" />
         <activity android:name=".activities.InfoActivity" />
         <activity android:name=".activities.SplashActivity" />
 
