--- a/build.gradle
+++ b/build.gradle
@@ -16,9 +16,11 @@ buildscript {
 
 allprojects {
     repositories {
+        mavenCentral()
         jcenter()
         maven { url 'https://jitpack.io' }
         maven { url 'https://maven.google.com'}
+
     }
 }
 
