--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,7 @@ dependencies {
     compile 'com.google.firebase:firebase-database:11.8.0'
     compile 'com.airbnb.android:lottie:2.5.1'
     compile 'com.github.blikoon:QRCodeScanner:0.1.2'
-    compile 'com.github.:f0ris.sweetalert:library:1.5.1'
+    compile 'cn.pedant.sweetalert:library:1.3'
 
     testCompile 'junit:junit:4.12'
 }
