--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 27
     defaultConfig {
         applicationId "com.kodbale.dkode"
-        minSdkVersion 16
+        minSdkVersion 15
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
@@ -26,9 +26,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:27.1.0'
     compile 'com.google.firebase:firebase-auth:11.8.0'
     compile 'com.google.firebase:firebase-database:11.8.0'
-    compile 'com.airbnb.android:lottie:2.5.1'
     compile 'com.github.blikoon:QRCodeScanner:0.1.2'
-    compile 'cn.pedant.sweetalert:library:1.3'
+    compile 'com.github.javiersantos:MaterialStyledDialogs:2.1'
 
     testCompile 'junit:junit:4.12'
 }
