--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,18 +19,20 @@
         android:theme="@style/AppTheme">
 
         <activity android:name=".activities.BufferActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
+
         </activity>
         <activity android:name=".MainActivity"></activity>
         <activity android:name=".activities.EndingActivity" />
         <activity android:name=".activities.ScoreActivity" />
         <activity android:name=".login.LoginActivity" />
         <activity android:name=".activities.InfoActivity" />
-        <activity android:name=".activities.SplashActivity" />
+        <activity android:name=".activities.SplashActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
 
 
     </application>
