--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ app/app.iml
 build/android-profile/*
 .idea/libraries/*
 app/src/main/java/com/kodbale/dkode/database/Solutions.java
+.idea/libraries/*
